@@ -1,3 +1,8 @@
+Fri Dec 19 14:17:57 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: Make several
+	methods package private, public methods are available from Mesh.
+
 Thu Dec 18 16:04:08 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/Mesh.java: New buildGroupBoundaries()
